# XenoideQt5

./: CMakeLists.txt
src/app/: CMakeLists.txt
